# FlowScope

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  apiUtils.lua  event.lua  flowscope.lua  flowtracker.lua  flowtracker2.lua  prioQueue.lua  qq.lua  qq_dump.lua  qq_pcap_writer.lua  restApi.lua
benchmarks/: flow-scaling.tex  flow-scaling.txt  noop.tex  noop.txt  tumcolors.sty
examples/: exampleUserModule.lua  liveStatistician.lua  noop.lua
filter-examples/: dumper-l2-flow.lua  trigger-payload.lua
lua/: apiUtils.lua  event.lua  exampleUserModule.lua  flowscope.lua  flowscope2.lua  flowtracker.lua  flowtracker2.lua  hmap.lua  liveStatistican.lua  liveStatistician.lua  quicDetect.lua  restApi.lua  tuple.lua
src/: QQ.hpp  flowtracker.cpp  junction_wrapper.cpp  leapfrog_bench.cpp  miniswap.cpp  pcap_writer.hpp  qq_wrapper.cpp  rte_allocator.hpp  signal.cpp  tbb_wrapper.cpp  tuple.cpp  tuple.hpp  var_hashmap.cpp
